--- a/src/editor.scss
+++ b/src/editor.scss
@@ -1,9 +1,5 @@
-/**
- * The following styles get applied inside the editor only.
- *
- * Replace them with your own styles or remove the file completely.
- */
+@import 'style.scss';
 
 .wp-block-notifications-notifications {
-	border: 1px dotted #f00;
+	// border: 1px dotted #f00;
 }
